Ajout page de contact
Mise à jours page de contact et css

--- a/about.html
+++ b/about.html
@@ -31,16 +31,16 @@
         <section class="team">
             <h3>👥 Équipe</h3>
             <ul>
-                <li><strong>Product Owner :</strong> Nom de la personne</li>
-                <li><strong>Scrum Master :</strong> Nom de la personne</li>
-                <li><strong>Développeurs :</strong> Liste des membres</li>
+                <li><strong>Product Owner :</strong> Pascal</li>
+                <li><strong>Scrum Master :</strong> Pascal</li>
+                <li><strong>Développeurs :</strong> Pascal</li>
             </ul>
         </section>
 
         <section class="links">
-            <h3>🔗 Liens utiles</h3>
+            <h3>🔗 Liens GitHub</h3>
             <p>
-                📂 <a href="https://github.com/utilisateur/nom-du-repo" target="_blank">Dépôt GitHub</a>
+                📂 <a href="https://github.com/pascal-fortunati/projet-html-scrum" target="_blank">Dépôt GitHub</a>
             </p>
         </section>
     </main>
