--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,10 @@
 
 <body>
     <header>
-        <h1>Projet Scrum HTML</h1>
+        <div class="logo-title">
+            <img src="img/logo.png" alt="Logo du projet">
+            <h1>Projet Scrum HTML</h1>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
